<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circuit_title" />

    <TextView
        android:id="@+id/text_view_number_of_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_sets" />

    <TextView
        android:id="@+id/text_view_number_of_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_rounds" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_circuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_number_of_set"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_circuit" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_view_title,text_view_number_of_set,text_view_number_of_round"
        app:flow_firstHorizontalStyle="packed"
        app:flow_firstVerticalStyle="packed"
        app:flow_maxElementsWrap="3"
        app:flow_wrapMode="aligned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>